--- a/Hundred/app/src/main/res/layout/item_template_recycler.xml
+++ b/Hundred/app/src/main/res/layout/item_template_recycler.xml
@@ -2,28 +2,34 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/itemLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/txtFirst"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="TextView" />
+    <com.android.volley.toolbox.NetworkImageView
+        android:id="@+id/imgPic"
+        android:layout_width="100dp"
+        android:layout_height="100dp" />
 
-    <TextView
-        android:id="@+id/txtSecond"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="TextView" />
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/txtThree"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="TextView" />
+        <TextView
+            android:id="@+id/lblTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="fruta loca"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/lblAuthor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:textSize="12sp" />
+
+    </LinearLayout>
 </LinearLayout>
